--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,120 @@
 h1 {
     width: 100%;
-    align-content: center;
+    margin-left: 30% !important;
     display: block;
 }
 
 header {
-    display: inline-block;
-    width: 100% !important;
-    padding: 10%;
+    padding: 2%;
+}
+
+.navbar {
+    background-color: rgb(36, 10, 79) !important;
+    color: aliceblue; 
+}
+
+.heading {
+    background-color: rgb(88, 108, 208);
+    padding: 2% !important;
+    border: 6px;
+    border-style: double;
+    border-color: black;
+    border-radius: 5px;
+    justify-content: center !important;
+    margin-bottom: 4% !important;
+    margin-top: 3% !important;
+    color: white;
 }
 
 h2 {
-    background-color: aquamarine;
-    padding: 8%;
-
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-left: 8% !important;
+    font-size: 24px;
 }
 
-body {
-    width: 70% !important;
+h3 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-left: 20% !important;
+    font-weight: 900;
+}
+
+.searchtitle {
+        color: rgb(88, 108, 208) !important;
+        padding: 2% !important;
+        justify-content: center !important;
+        font-weight: 900 !important;   
+}
+
+.container-test {
+    display: flex;
+    width: 100vw;
+    margin: 0 !important;
+   
 }
 
 .column-1 {
     display: flex;
-    flex: 0 0 15%;
+    flex: 20vw !important;
+    align-content: center !important;
 }
 
-.column-1 {
+.column-2 {
     display: flex;
-    flex: 0 0 84%;
+    flex: 80%;
+}
+
+span {
+    border-style: double;
+    border-color: black;
+    border-radius: 5px;
 }
 
 form {
     width: 80% !important;
+    background-color: rgb(195, 227, 241);
+    padding: 3%;
+    margin-left: 6%;
 }
 
-.past-search {
-    width: 19% !important;
-}
+
 
 .hide {
     display: none;
+}
+
+.forecast {
+    display: flex;
+margin: 4% !important;
+justify-content: space-evenly;
+}
+
+.searchresults {
+    display: flex;
+}
+
+#resultDate, #resultTemp, #resultHumidity, #resultWind {
+    margin: 4% !important;
+    display: flex;
+    padding: 1%;
+    font-weight: bold;
+
+}
+
+@media screen and (max-width: 800px) {
+    h2, h3 {
+        margin-left: 5% !important;
+        font-size: 18px;
+    }
+}
+
+
+@media screen and (max-width: 550px) {
+    h2 {
+        margin-left: 0% !important;
+        font-size: 16px;
+    }
+
+    h3 {
+        margin-left: 5% !important;
+    }
 }
